err/two2three.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/two2three'...
Listing './lib/python3.5/site-packages/two2three/fixes'...
Compiling './lib/python3.5/site-packages/two2three/fixes/fix_unicode.py'...
***   File "./lib/python3.5/site-packages/two2three/fixes/fix_unicode.py", line 10
    _literal_re = re.compile(ur"[uU][rR]?[\'\"]")
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/two2three/main.py'...
***   File "./lib/python3.5/site-packages/two2three/main.py", line 47
    except os.error, err:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/two2three/pgen2'...
Compiling './lib/python3.5/site-packages/two2three/pgen2/conv.py'...
***   File "./lib/python3.5/site-packages/two2three/pgen2/conv.py", line 63
    except IOError, err:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/two2three/pgen2/driver.py'...
***   File "./lib/python3.5/site-packages/two2three/pgen2/driver.py", line 133
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/two2three/pgen2/grammar.py'...
***   File "./lib/python3.5/site-packages/two2three/pgen2/grammar.py", line 116
    print "s2n"
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/two2three/pgen2/literals.py'...
***   File "./lib/python3.5/site-packages/two2three/pgen2/literals.py", line 56
    print i, c, s, e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/two2three/pgen2/pgen.py'...
***   File "./lib/python3.5/site-packages/two2three/pgen2/pgen.py", line 206
    print "Dump of NFA for", name
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/two2three/pgen2/tokenize.py'...
***   File "./lib/python3.5/site-packages/two2three/pgen2/tokenize.py", line 154
    def printtoken(type, token, (srow, scol), (erow, ecol), line): # for testing
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/two2three-84300.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
